--- a/main-notebook2.ipynb
+++ b/main-notebook2.ipynb
@@ -191,7 +191,8 @@
     "\n",
     "%matplotlib inline\n",
     "fsl = SL_Flock(10,100,100)\n",
-    "fsl.display_state()\n"
+    "fsl.display_state()\n",
+    "#test change\n"
    ]
   },
   {
