--- a/main-notebook2.ipynb
+++ b/main-notebook2.ipynb
@@ -85,10 +85,7 @@
     "        return np.array([new_pos,new_theta])\n",
     "\n",
     "    def calculate_new_theta(self,flock_posdir,sigma,R):\n",
-    "        #TODO : find birds within radius, do the two-dimensional vector sumof the ˆnj , \n",
-    "        # normalize the result, and then take the angle of it\n",
-    "        # n_sum  = np.array([0,0])\n",
-    "        pass\n",
+    "        \n",
     "\n",
     "class Flock():\n",
     "    def __init__(self,N,speed,frame_size):\n",
@@ -145,6 +142,15 @@
     "f = Flock(20,10,500)\n",
     "\n",
     "f.display_state()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Test"
    ]
   },
   {
