--- a/Flocking Behaviour.ipynb
+++ b/Flocking Behaviour.ipynb
@@ -10,12 +10,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.8.5"
   },
   "orig_nbformat": 2,
   "kernelspec": {
-   "name": "python3810jvsc74a57bd05be8443f2ddba3caa67be9726c3314d61d43b2c9ebde784a24de816a1b7d87bf",
-   "display_name": "Python 3.8.10 64-bit ('PythonSoftwareFoundation.Python.3.8_qbz5n2kfra8p0')"
+   "name": "python385jvsc74a57bd0b3ba2566441a7c06988d0923437866b63cedc61552a5af99d1f4fb67d367b25f",
+   "display_name": "Python 3.8.5 64-bit ('base': conda)"
   },
   "metadata": {
    "interpreter": {
@@ -36,9 +36,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "error",
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'plotly'",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-8-ea2f16cf2ec9>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[1;32mfrom\u001b[0m \u001b[0mflock\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[1;33m*\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;32mc:\\Users\\griev\\OneDrive\\Documents\\GitHub\\vicsek-model-group3\\flock.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      8\u001b[0m \u001b[1;32mfrom\u001b[0m \u001b[0mnumpy\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mlib\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mshape_base\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mtile\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      9\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mpandas\u001b[0m \u001b[1;32mas\u001b[0m \u001b[0mpd\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 10\u001b[1;33m \u001b[1;32mimport\u001b[0m \u001b[0mplotly\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mgraph_objects\u001b[0m \u001b[1;32mas\u001b[0m \u001b[0mgo\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     11\u001b[0m \u001b[1;32mfrom\u001b[0m \u001b[0mscipy\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mspatial\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mdistance\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mpdist\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0msquareform\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mcdist\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     12\u001b[0m \u001b[1;32mfrom\u001b[0m \u001b[0mscipy\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mspatial\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mtransform\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mRotation\u001b[0m \u001b[1;32mas\u001b[0m \u001b[0mR\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'plotly'"
+     ]
+    }
+   ],
    "source": [
     "from flock import *"
    ]
@@ -391,6 +404,60 @@
     "# anim = f_3d.animate_movement(1,200)\n",
     "HTML(anim.to_jshtml())"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "Collecting plotly==4.14.3\n  Downloading plotly-4.14.3-py2.py3-none-any.whl (13.2 MB)\nRequirement already satisfied: six in c:\\programdata\\anaconda3\\lib\\site-packages (from plotly==4.14.3) (1.15.0)\nCollecting retrying>=1.3.3\n  Downloading retrying-1.3.3.tar.gz (10 kB)\nBuilding wheels for collected packages: retrying\n  Building wheel for retrying (setup.py): started\n  Building wheel for retrying (setup.py): finished with status 'done'\n  Created wheel for retrying: filename=retrying-1.3.3-py3-none-any.whl size=11434 sha256=3903999dc257c5c9bdb3aeb54df41a6ebfbaa7e244a7a7788d68ef448d5b13bd\n  Stored in directory: c:\\users\\griev\\appdata\\local\\pip\\cache\\wheels\\c4\\a7\\48\\0a434133f6d56e878ca511c0e6c38326907c0792f67b476e56\nSuccessfully built retrying\nInstalling collected packages: retrying, plotly\nSuccessfully installed plotly-4.14.3 retrying-1.3.3\nNote: you may need to restart the kernel to use updated packages.\n"
+     ]
+    }
+   ],
+   "source": [
+    "pip install plotly==4.14.3"
+   ]
+  },
+  {
+   "source": [
+    "\n",
+    "$$\n",
+    "\\textrm{Rotation matrix for rotation in the XY axis by theta}\n",
+    "$$\n",
+    "\n",
+    "$$\n",
+    " \\begin{bmatrix}\n",
+    "   cos(\\theta) & -sin(\\theta) & 0 \\\\\n",
+    "   sin(\\theta) & cos(\\theta) & 0 \\\\\n",
+    "   0 & 0 & 1\n",
+    "  \\end{bmatrix} \\tag{3}\n",
+    "$$\n",
+    "$$\n",
+    "\\textrm{Rotation matrix for rotation in the XZ axis by phi}\n",
+    "$$\n",
+    "$$\n",
+    " \\begin{bmatrix}\n",
+    "   cos(\\phi) & 0 & sin(\\phi) \\\\\n",
+    "   0 & 1 & 0 \\\\\n",
+    "   -sin(\\phi) & 0 & cos(\\phi)\n",
+    "  \\end{bmatrix} \\tag{3}\n",
+    "$$\n"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "source": [
+    "\n"
+   ],
+   "cell_type": "code",
+   "metadata": {},
+   "execution_count": null,
+   "outputs": []
   }
  ]
 }
