--- a/Flocking Behaviour.ipynb
+++ b/Flocking Behaviour.ipynb
@@ -32,6 +32,22 @@
     "# Analysis\n",
     "In this notebook we will talk about our findings from this project, include various animations of both 2d and 3d birds flocking and plots of how the Vicsek Order Parameter and convergence of this overdamped system is affected by varying the parameters. "
    ],
+   "cell_type": "code",
+   "metadata": {},
+   "execution_count": null,
+   "outputs": []
+  },
+  {
+   "source": [
+    "To code the Vicsek Model we opted to use a Object Orientated Programming paradigm, as proposed by Ben. By creating different objects, we were able to group useful functions together which improves readability and efficiency in the code. With the main benefit of this coding style being the ability to split the workload by methods. "
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "source": [
+    "To wrap the frame we used a method suggested by Dr Silke. By tiling the birds positions together we create a 3d array, tiling it twice horizontally and vertically. By subtracting the two 3d arrays we create an array of the pairwise vectors between each bird. This function is not unsimilar to the built in scipy.special.distance() with the difference being that the array we create is non normalised. From this point we can then calculate if each component of each vector is bigger than (L/2), where L is the frame size. If this is true we then recalculate the component now being itself mod the frame size."
+   ],
    "cell_type": "markdown",
    "metadata": {}
   },
